<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">725312227561858</string>
    <string name="app_name">CYOA Client</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="returning_user_info">Our records indicate that you have installed this app before.</string>
    <string name="returning_user_resume_progress">Continue progress?</string>
    <string name="returning_user_resume_progress_warning">(Note: by choosing not to continue, your progress will be reset permanently.)</string>
    <string name="returning_user_redo_tutorial">Redo tutorial?</string>
    <string name="returning_user_redo_tutorial_warning">(Note: you will still be able to do the tutorial later.)</string>
    <string name="returning_user_continue">Continue</string>

    <string name="database_setup_info">Setting things up for you...</string>

    <string name="tutorial_info">Tutorial goes here</string>
    <string name="tutorial_skip">Skip</string>

</resources>